tests/baselines/reference/parserRegularExpression5.errors.txt
tests/cases/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpression5.ts(1,5): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpression5.ts(1,38): error TS2304: Cannot find name 'c'.


==== tests/cases/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpression5.ts (2 errors) ====
    if (a) / (\\ ? | & ) rct = j / .test(c.href);
        ~
!!! error TS2304: Cannot find name 'a'.
                                         ~
!!! error TS2304: Cannot find name 'c'.